--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,42 @@
  *= require_tree .
  *= require_self
  */
+
+ul {
+  list-style-type: none;
+}
+
+#navbar {
+  background-color: powderblue;
+}
+
+/* Label above the input */
+.field_with_errors {
+  color: red;
+}
+
+/* around the input field */
+.field_with_errors input {
+  border: 1px solid red !important;
+}
+
+.field_with_errors textarea {
+  border: 1px solid red !important;
+}
+
+/* The text errors and error messages */
+#error-explanation {
+  color: red;
+}
+
+/* flash */
+
+.error {
+  color: red;
+}
+
+.success {
+  padding: 2px;
+  color: green;
+  display: table;
+}
