--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,4 +1,6 @@
 <h1>View all Employees</h1>
-
-<% @employees.each do |employee| %> <%= link_to employee.first_name,
-employee_path(employee) %><br /><% end %>
+<hr>
+<h3><%= link_to "Create new Employee", new_employee_path %></h3>
+<% @employees.each do |employee| %> 
+    <h3><%= link_to employee.first_name, employee_path(employee) %></h3>
+<% end %>
